<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/edtUsername_Hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/edtPassword_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="btnLoginClicked"
        android:text="@string/login" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="bottom"
            android:layout_row="0"
            android:text="@string/serverIPaddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtServerIP"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:text="@string/defaultIP" />

        <Space
            android:layout_width="1dp"
            android:layout_height="197dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />
    </GridLayout>

</LinearLayout>