<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:columnCount="6" >

    <ImageView
        android:id="@+id/movieDetail_imgMovie"
        android:layout_width="110dp"
        android:layout_height="159dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_rowSpan="3"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/movieDetail_txtMovieName"
        android:layout_width="186dp"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:id="@+id/movieDetail_layoutUserRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/movieDetail_txtUserRating"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/yourRating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <Spinner
            android:id="@+id/movieDetail_spnRating"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0" />

        <Button
            android:id="@+id/movieDetail_btnRate"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/rate" />
    </GridLayout>

    <GridLayout
        android:id="@+id/movieDetail_layoutShowInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:useDefaultMargins="true"
        android:visibility="gone" >

        <TextView
            android:id="@+id/movieDetail_txtTime"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:text="23/12/2012 23:23"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/movieDetail_txtHall"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="Hall: 4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/movieDetail_txtPrice"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="10.00 €"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/movieDetail_btnBuyTicket"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_row="2"
            android:onClick="btnBuyTicketClicked"
            android:text="@string/btnBuyTicket" />
    </GridLayout>

    <RatingBar
        android:id="@+id/movieDetail_ratingBar_averageRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="4"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/movieDetail_txtDescription"
        android:layout_width="270dp"
        android:layout_height="236dp"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="6"
        android:inputType="none" >

    </TextView>

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="99dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_row="1" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5" />

    <Space
        android:layout_width="17dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="18dp"
        android:layout_height="1dp"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" />

</GridLayout>